[gd_scene load_steps=2 format=3 uid="uid://b6x8o0xj8urq4"]

[ext_resource type="Script" path="res://main.gd" id="1_r3j8q"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="DrawingArea" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3j8q")

[node name="ClearButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 50.0
text = "Clear"

[node name="SaveButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 120.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 50.0
text = "Save"

[node name="PressureSlider" type="HSlider" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 210.0
offset_bottom = 76.0
max_value = 1.0
step = 0.1
value = 0.5

[node name="PressureLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 220.0
offset_top = 60.0
offset_right = 320.0
offset_bottom = 86.0
text = "Pressure: 0.5"

[node name="TiltSlider" type="HSlider" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 90.0
offset_right = 210.0
offset_bottom = 106.0
max_value = 1.0
step = 0.1
value = 0.5

[node name="TiltLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 220.0
offset_top = 90.0
offset_right = 320.0
offset_bottom = 116.0
text = "Tilt: 0.5"

[node name="EraserToggle" type="CheckButton" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 120.0
offset_right = 210.0
offset_bottom = 151.0
text = "Eraser Mode"

[connection signal="pressed" from="CanvasLayer/UI/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/UI/PressureSlider" to="." method="_on_pressure_sensitivity_changed"]
[connection signal="value_changed" from="CanvasLayer/UI/TiltSlider" to="." method="_on_tilt_sensitivity_changed"]
[connection signal="toggled" from="CanvasLayer/UI/EraserToggle" to="." method="_on_eraser_toggle_changed"]
